# SPHImplementation

./: .gitignore  README.md  rewiev.txt  roadmap.txt
TEST/testProjectSPH/: CMakeLists.txt  testProjectSPH.sln
TEST/testProjectSPH/_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NeighouborsSearch.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  testProjectSPH.sln  testProjectSPH.vcxproj  testProjectSPH.vcxproj.filters
TEST/testProjectSPH/_build/testProjectSPH.dir/Debug/: testProjectSPH.exe.recipe  testProjectSPH.ilk
TEST/testProjectSPH/_build/testProjectSPH.dir/Debug/testProjectSPH.tlog/: Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TEST/testProjectSPH/_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
TEST/testProjectSPH/_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
TEST/testProjectSPH/_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
TEST/testProjectSPH/_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+2 more)
TEST/testProjectSPH/testProjectSPH/: testProjectSPH.cpp  testProjectSPH.vcxproj  testProjectSPH.vcxproj.filters
TEST/testProjectSPH/testProjectSPH/x64/Debug/: testProjectSPH.exe.recipe  testProjectSPH.ilk  vc143.idb
TEST/testProjectSPH/testProjectSPH/x64/Debug/testProjectSPH.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testProjectSPH.lastbuildstate
(+9 files in other folders)
